report machanisum changed

--- a/src/test/java/Report/index.html
+++ b/src/test/java/Report/index.html
@@ -56,7 +56,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">Oct 23, 2023 11:48:56 PM</span>
+                    <span class="badge badge-primary">Oct 24, 2023 12:03:26 AM</span>
                 </a>
             </li>
         </ul>
@@ -133,7 +133,7 @@
 						<div class="test-detail">
 							<p class="name">TokenGeneration</p>
 							<p class="duration text-sm">0h 0m 0s+1ms</p>
-							<span class="datetime">23:48:59 PM</span>
+							<span class="datetime">00:03:28 AM</span>
 						</div>
 					</div>
 					<div class="test-contents d-none">
@@ -141,8 +141,8 @@
 							<div class="p-v-10 d-inline-block">
 								<div class="info">
 									<h5 class="test-status text-pass">TokenGeneration</h5>
-									<span class='badge badge-success'>10.23.2023 23:48:59</span>
-									<span class='badge badge-danger'>10.23.2023 23:48:59</span>
+									<span class='badge badge-success'>10.24.2023 00:03:28</span>
+									<span class='badge badge-danger'>10.24.2023 00:03:28</span>
 									<span class='badge badge-default'>0h 0m 0s+1ms</span>
 								</div>
 								<div class="m-t-10 m-l-5">
@@ -160,7 +160,7 @@
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>11:48:59 PM</td>
+				<td>12:03:29 AM</td>
 				<td>
 						Test Passed
 				</td>
@@ -190,9 +190,9 @@
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-info text-info"></i></td>
-				<td>11:48:59 PM</td>
+				<td>12:03:28 AM</td>
 				<td>
-						{"Token":"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJuYmYiOjE2OTgwODUxMzgsImV4cCI6MTY5ODA5MjMzOCwiaWF0IjoxNjk4MDg1MTM4LCJpc3MiOiJNdWx0aWNob2ljZSIsImF1ZCI6IndoYXRzYXBwIn0.weZgTEPFaLG3FGCc9aslLdkuaXTynhfb68USndvW-Ps","ExpiryPeriodInMinutes":120}
+						{"Token":"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJuYmYiOjE2OTgwODYwMDgsImV4cCI6MTY5ODA5MzIwOCwiaWF0IjoxNjk4MDg2MDA4LCJpc3MiOiJNdWx0aWNob2ljZSIsImF1ZCI6IndoYXRzYXBwIn0.ktyI--wro0KfUKmnYca3hj3QsLMLc2k1PDS7UNAl848","ExpiryPeriodInMinutes":120}
 				</td>
 			</tr>
 	</tbody>
@@ -214,8 +214,8 @@
 					<div class="open-test">
 						<div class="test-detail">
 							<p class="name">LoginRequest</p>
-							<p class="duration text-sm">0h 1m 41s+782ms</p>
-							<span class="datetime">23:48:59 PM</span>
+							<p class="duration text-sm">0h 1m 41s+603ms</p>
+							<span class="datetime">00:03:29 AM</span>
 						</div>
 					</div>
 					<div class="test-contents d-none">
@@ -223,9 +223,9 @@
 							<div class="p-v-10 d-inline-block">
 								<div class="info">
 									<h5 class="test-status text-fail">LoginRequest</h5>
-									<span class='badge badge-success'>10.23.2023 23:48:59</span>
-									<span class='badge badge-danger'>10.23.2023 23:50:41</span>
-									<span class='badge badge-default'>0h 1m 41s+782ms</span>
+									<span class='badge badge-success'>10.24.2023 00:03:29</span>
+									<span class='badge badge-danger'>10.24.2023 00:05:10</span>
+									<span class='badge badge-default'>0h 1m 41s+603ms</span>
 								</div>
 								<div class="m-t-10 m-l-5">
 									
@@ -242,7 +242,7 @@
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-times text-fail"></i></td>
-				<td>11:50:41 PM</td>
+				<td>12:05:10 AM</td>
 				<td>
 						<textarea disabled class="code-block">java.lang.AssertionError: 1 expectation failed.
 Expected status code <200> but was <500>.
@@ -273,7 +273,7 @@ Expected status code <200> but was <500>.
 	at io.restassured.specification.ResponseSpecification$statusCode$0.callCurrent(Unknown Source)
 	at io.restassured.internal.ResponseSpecificationImpl.statusCode(ResponseSpecificationImpl.groovy:143)
 	at io.restassured.internal.ValidatableResponseOptionsImpl.statusCode(ValidatableResponseOptionsImpl.java:89)
-	at TestCases.Test.LoginRequest(Test.java:64)
+	at TestCases.Test.LoginRequest(Test.java:59)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -316,8 +316,8 @@ Expected status code <200> but was <500>.
 					<div class="open-test">
 						<div class="test-detail">
 							<p class="name">LoginRequest</p>
-							<p class="duration text-sm">0h 1m 40s+511ms</p>
-							<span class="datetime">23:50:41 PM</span>
+							<p class="duration text-sm">0h 1m 41s+1ms</p>
+							<span class="datetime">00:05:10 AM</span>
 						</div>
 					</div>
 					<div class="test-contents d-none">
@@ -325,9 +325,9 @@ Expected status code <200> but was <500>.
 							<div class="p-v-10 d-inline-block">
 								<div class="info">
 									<h5 class="test-status text-fail">LoginRequest</h5>
-									<span class='badge badge-success'>10.23.2023 23:50:41</span>
-									<span class='badge badge-danger'>10.23.2023 23:52:21</span>
-									<span class='badge badge-default'>0h 1m 40s+511ms</span>
+									<span class='badge badge-success'>10.24.2023 00:05:10</span>
+									<span class='badge badge-danger'>10.24.2023 00:06:51</span>
+									<span class='badge badge-default'>0h 1m 41s+1ms</span>
 								</div>
 								<div class="m-t-10 m-l-5">
 									
@@ -344,7 +344,7 @@ Expected status code <200> but was <500>.
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-times text-fail"></i></td>
-				<td>11:52:21 PM</td>
+				<td>12:06:51 AM</td>
 				<td>
 						<textarea disabled class="code-block">java.lang.AssertionError: 1 expectation failed.
 Expected status code <200> but was <500>.
@@ -373,7 +373,7 @@ Expected status code <200> but was <500>.
 	at io.restassured.specification.ResponseSpecification$statusCode$0.callCurrent(Unknown Source)
 	at io.restassured.internal.ResponseSpecificationImpl.statusCode(ResponseSpecificationImpl.groovy:143)
 	at io.restassured.internal.ValidatableResponseOptionsImpl.statusCode(ValidatableResponseOptionsImpl.java:89)
-	at TestCases.Test.LoginRequest(Test.java:64)
+	at TestCases.Test.LoginRequest(Test.java:59)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -469,7 +469,7 @@ Expected status code <200> but was <500>.
 											<i class="fa fa-times text-white"></i>
 										</div>
 									</td>
-									<td>23:48:59 PM</td>
+									<td>00:03:29 AM</td>
 									<td class='linked' test-id='3'>
 										LoginRequest
 									</td>
@@ -480,7 +480,7 @@ Expected status code <200> but was <500>.
 											<i class="fa fa-times text-white"></i>
 										</div>
 									</td>
-									<td>23:50:41 PM</td>
+									<td>00:05:10 AM</td>
 									<td class='linked' test-id='4'>
 										LoginRequest
 									</td>
@@ -618,7 +618,7 @@ Expected status code <200> but was <500>.
 					<div class="media justify-content-between">
 						<div class="card-header">
 							<h6 class="card-title">Start</h6>
-							<h4 class="font-weight-light mt-4">Oct 23, 2023 11:48:56 PM</h4>
+							<h4 class="font-weight-light mt-4">Oct 24, 2023 12:03:26 AM</h4>
 							<span class="text-semibold text-success font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -634,7 +634,7 @@ Expected status code <200> but was <500>.
 					<div class="media justify-content-between">
 						<div class="card-header">
 							<h6 class="card-title">Duration</h6>
-							<h4 class="font-weight-light mt-4">0h 3m 25s+722ms</h4>
+							<h4 class="font-weight-light mt-4">0h 3m 24s+848ms</h4>
 							<span class="text-semibold font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -706,7 +706,7 @@ Expected status code <200> but was <500>.
 </script>
 <script>
 	var timeline = {
-	        "TokenGeneration":0.001,"LoginRequest":101.782,"LoginRequest":100.511
+	        "TokenGeneration":0.001,"LoginRequest":101.603,"LoginRequest":101.001
 	};
 </script>
                 </div>
